Refactor tests for StructureService, AscriptionLifecyclePathType, AscriptionStatusType, DefinitionSubjectType, and PrimitiveType
- Updated StructureServiceTest to improve readability and maintainability by reformatting test methods and organizing nested classes.
- Enhanced AscriptionLifecyclePathTypeTest with consistent formatting and improved test structure.
- Refined AscriptionStatusTypeTest for clarity and consistency in parameterized tests.
- Improved DefinitionSubjectTypeTest by standardizing formatting and enhancing readability.
- Updated PrimitiveTypeTest to ensure consistent formatting and improved test organization.
- Reformatted application-tc.yaml for better readability and consistency in indentation.